[package]
name = "wagen"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/dylibso/wagen"
license = "BSD-3-Clause"
description = "A library to help generate WebAssembly"

[dependencies]
anyhow = "1.0.71"
wasm-encoder = {version = "0.201.0", features = ["wasmparser"]}
wasmparser = {version = "0.201.0"}
extism-manifest = {version = "1", optional = true}
extism = {version = "1", optional = true}
wasmtime = {version = ">= 16.0.0, < 19.0.0", optional = true}

[features]
default = []
extism = ["dep:extism", "dep:extism-manifest"]

[[example]]
name = "add1"
required-features = ["wasmtime"]

[[example]]
name = "count_vowels"
required-features = ["extism"]

[[example]]
name = "hello"
required-features = ["extism"]
